# RailRoadSim

./: .gitignore  README.md  generate_data.py  prompt2cursor.txt  pyproject.toml  simulation.py  tester.ipynb  visualization.py
input/: .~lock.UBmagad.xlsx#  Data_main.xlsx  UBmagad.xlsx  Өртөөний салбар зам.xlsx
simulation_artifacts/: containers.csv  containers.xlsx  containers_2025-01-01.xlsx  june_2025_containters.xlsx  june_2025_containters_extended.xlsx  june_2025_containters_extended_smoothed.xlsx  june_2025_containters_mean_60_sigma_10.xlsx
simulation_results/: daily_results_2025-06-01_to_2025-06-30.json  monthly_summary_2025-06-01_to_2025-06-30.json  results_df.csv  simulation_results_2025-06-01_to_2025-06-30.csv  summary_2025-06-01_to_2025-06-30.json  train_sequences_2025-06-01_to_2025-06-30.xlsx
simulation_results_peqpoint7_probabilistic/: results_df.csv  simulation_results_2025-06-01_to_2025-06-30.csv  summary_2025-06-01_to_2025-06-30.json  train_sequences_2025-06-01_to_2025-06-30.xlsx
